--- a/index.html
+++ b/index.html
@@ -237,6 +237,15 @@
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/main.js"></script>
+  <script>
+    $(function(){
+      $('#page-top').on('click', function(){
+        $('html, body').animate({
+          scrollTop: 0
+        }, 500);
+      })
+    })
+  </script>
 </body>
 
 </html>
